Add color deletion; complimentary and triad color feature (no db)
